fix:text overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -513,4 +513,5 @@ footer styling ends here
     .city-input { width: 95%;}
     .login-form { width: 80%;}
     .info { width: 80%;}
+    .city { font-size:21px}
 }
